samples/_failures_safe/1761606436_181ad7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5298ae5d.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_5298ae5d.c:175:23: error: missing terminating " character
  175 |         "IDENTIFIER", "
      |                       ^
./samples/SAFE/__tmp_5298ae5d.c:175:9: error: expected expression at end of input
  175 |         "IDENTIFIER", "
      |         ^~~~~~~~~~~~
./samples/SAFE/__tmp_5298ae5d.c:175:9: error: expected declaration or statement at end of input
